<resources>
    <string name="app_name">Grocery Shopper</string>
    <string name="title">Welcome to Grocery Shopper</string>
    <string name="img">shop image</string>
    <string name="tagline">Login to order your shopping list</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="desc">Variety of products</string>
    <string name="desc1">Efficient service</string>
    <string name="desc2">Cash on pick up.</string>
    <string name="uname">Username</string>
    <string name="pwd">Password</string>
    <string name="input" />
    <string name="reg">Don\'t have an account?</string>
    <string name="regtitle">Registration</string>
    <string name="fname">Full name</string>
    <string name="address">Address</string>
    <string name="homeno">Home Number</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="heading">Order your shopping list without any hassle!</string>
    <string name="deals">Daily Deals and Recommendations</string>
    <string name="search">Search Items</string>
    <string name="cart">Shopping Cart</string>
    <string name="delivery">Check delivery status</string>
    <string name="feedback">Feedback</string>
    <string name="beverage">Beverages</string>
    <string name="bakery">Bakery</string>
    <string name="ztea">Zesta tea pack</string>
    <string name="zteaprice">Rs.500</string>
    <string name="cartadd">Add to cart</string>
    <string name="flatbread">Prima Flat bread</string>
    <string name="fbreadprice">Rs.150</string>
    <string name="wbread">Prima White bread</string>
    <string name="searchbar1">  Search for products</string>
    <string name="fruit">Fresh fruits</string>
    <string name="dac"><![CDATA[Dairy, Eggs & Cheese]]></string>
    <string name="icategory">Item Categories</string>
    <string name="searchbar2">Search for category</string>
    <string name="porder">Place order</string>
    <string name="product">Product</string>
    <string name="qty">Quantity</string>
    <string name="price">Price</string>
    <string name="pstella">Prima Stella noodles</string>
    <string name="pstellaprice">Rs.50</string>
    <string name="three">3</string>
    <string name="priceval1">Rs. 150</string>
    <string name="one">1</string>
    <string name="ordertot">Order total</string>
    <string name="total">Rs. 650</string>
    <string name="deliverycharge">+ Rs. 250 For delivery</string>
    <string name="deliver">Deliver details</string>
    <string name="deldate">Delivery date</string>
    <string name="deltime">Delivery time</string>
    <string name="urgency">Urgent delivery</string>
    <string name="deladdr">Delivery address</string>
    <string name="totpayment">Payment amount      Rs. 900</string>
    <string name="corder">Confirm order</string>
    <string name="note">Please note that payment will be on delivery</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="back">Back to Dashboard</string>
    <string name="FeedbackPart2">Do you have any feedback or suggestion would be appreciated?</string>
    <string name="adminpg">Welcome to Admin page</string>
    <string name="addStf">Staff records</string>
    <string name="order">Check orders</string>
</resources>