<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundhome"
    tools:context=".ShoppingcartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="125dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shopcart" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/uname"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/logout"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="78dp"
        android:layout_height="84dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/user" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="486dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_div1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <TextView
            android:id="@+id/textView17"
            android:layout_width="191dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/cart"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="390dp"
            android:layout_height="404dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17">

            <Button
                android:id="@+id/button7"
                android:layout_width="126dp"
                android:layout_height="35dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/porder"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="94dp"
                android:layout_height="37dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/product"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="46dp"
                android:layout_height="20dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="10dp"
                android:text="@string/pstellaprice"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="46dp"
                android:layout_height="20dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="5dp"
                android:text="@string/pstellaprice"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginStart="124dp"
                android:layout_marginLeft="124dp"
                android:layout_marginTop="44dp"
                android:text="@string/deliverycharge"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView31"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="71dp"
                android:layout_height="31dp"
                android:layout_marginStart="33dp"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="43dp"
                android:text="@string/total"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView31"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="94dp"
                android:layout_height="37dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/pstella"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView24" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="95dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="36dp"
                android:text="@string/ztea"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="94dp"
                android:layout_height="37dp"
                android:layout_marginStart="34dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="16dp"
                android:text="@string/qty"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/textView24"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="94dp"
                android:layout_height="37dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/textView25"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="60dp"
                android:layout_height="41dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <EditText
                android:id="@+id/editTextNumber3"
                android:layout_width="85dp"
                android:layout_height="42dp"
                android:layout_marginStart="49dp"
                android:layout_marginLeft="49dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/priceval1"
                app:layout_constraintStart_toEndOf="@+id/editTextNumber"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <EditText
                android:id="@+id/editTextNumber4"
                android:layout_width="85dp"
                android:layout_height="42dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="128dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/zteaprice"
                app:layout_constraintStart_toEndOf="@+id/editTextNumber"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="64dp"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/one"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="127dp"
                android:layout_height="38dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/ordertot"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>