<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundhome"
    tools:context=".DeliverOrderActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="125dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shopcart" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/uname"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btlogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/logout"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="78dp"
        android:layout_height="84dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/user" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="449dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_div1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/categoryName"
            android:layout_width="168dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:text="@string/deliver"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/deldate"
            android:textColor="@color/textcolor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryName" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="40dp"
            android:text="@string/deltime"
            android:textColor="@color/textcolor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="144dp"
            android:text="@string/deladdr"
            android:textColor="@color/textcolor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="202dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/totpayment"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="259dp"
            android:layout_height="47dp"
            android:layout_marginTop="116dp"
            android:text="@string/note"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

        <EditText
            android:id="@+id/etuname"
            android:layout_width="218dp"
            android:layout_height="36dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="11dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/input"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/categoryName" />

        <EditText
            android:id="@+id/editTextTextPersonName8"
            android:layout_width="218dp"
            android:layout_height="36dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="26dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/input"
            app:layout_constraintStart_toEndOf="@+id/textView34"
            app:layout_constraintTop_toBottomOf="@+id/etuname" />

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="218dp"
            android:layout_height="36dp"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/input"
            app:layout_constraintStart_toEndOf="@+id/textView35"
            app:layout_constraintTop_toBottomOf="@+id/switch1" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="114dp"
            android:layout_marginLeft="114dp"
            android:layout_marginTop="30dp"
            android:text="@string/urgency"
            android:textColor="@color/textcolor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

        <Button
            android:id="@+id/button"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/corder"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>